Improve graph environment error checking